[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"                                   # error handling
bytes = "1.10.1"                                     # helps manage buffers
radix_trie = "0.3.0"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.47.1", features = ["full"] } # async networking

[dev-dependencies]
redis = { version = "0.32.7", features = ["tokio-comp"] }
