[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"                                   # error handling
bytes = "1.10.1"                                     # helps manage buffers
radix_trie = "0.3.0"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.47.1", features = ["full"] } # async networking
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]
chrono = "0.4.42"
redis = { version = "0.32.7", features = ["tokio-comp"] }
tracing-subscriber = {version = "0.3.20", features = ["env-filter"] }
